21.sep (la)
      - fix #7142: Crescendo & delete measures problems (MusicXML export)
      - fix #7197: MuseScore fails to open MSCZ files with capitals
      - fix #6932: Changing notehead of a breve crash
20.sep (ws)
      - tablature editing:
            - "up/down"       chromatic pitch change (same as for pitched staff)
            - "shift+up/down" change fret number
            - "ctrl+up/down"  change string number
      - shift+up/shift+down changes note pitch diatonic
      - shortcut for "select staff above/below" was changed to alt+shift+up/down
19.sep (ws)
      - implement "add linked staff" in instrument dialog
      - move creation/deletion of accidentals out of doLayout();
        selectable elements cannot be created/deleted in doLayout()
17.sep (ws)
      - new track attribute "visible" in instrument dialog
      - add copy&paste of breath elements
16.sep (ws)
      - fix crash when typing "H" for "hairpin"
      - fix bounding box of stem slash (acciacatura etc), fixes screen update
      - fix stem lenght of grace notes
      - fix crash when removing score with two note tremolo
15.sep (ws)
      - fix broken autobeamer
14.sep (ws)
      - foto mode: implemented: drag&drop selected frame in MuseScore to oowriter
        using eps format
      - renamed appstyle.st to appstyle-dark.css (its a "cascading style sheet")
      - add "standard" app style "appstyle.st"
       (la)
      - Fix #7077: Applying double-note tremolo to dotted notes fails and alter measure duration
13.sep (ws)
      - new feature: fotomode
12.sep (lv)
      - #5637 support reading bww files: irregular measures
10.sep (ws)
      - start port of kde oxygen style to make it available for
        windows
8.sep (ws)
      - add application style file to preferences
7.sep (ws)
      - command line option "-i" also loads the application style
        sheet from INSTALLPATH/styles/appstyle.st
        (see http://doc.qt.nokia.com/4.7-snapshot/stylesheet.html)
6.sep (ws)