@@ -2,6 +2,8 @@
       - fix #7142: Crescendo & delete measures problems (MusicXML export)
       - fix #7197: MuseScore fails to open MSCZ files with capitals
       - fix #6932: Changing notehead of a breve crash
+      - add access to DPI, notehead, note bounding box and note position from plugin framework
+            (Patch by Mikhail Eliseev)
 20.sep (ws)
       - tablature editing:
             - "up/down"       chromatic pitch change (same as for pitched staff)
